
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ ULONG ;
typedef scalar_t__ PVOID ;
typedef int PSTR ;
typedef scalar_t__ PINVB_SET_SCROLL_REGION ;
typedef scalar_t__ PINBV_SOLID_COLOR_FILL ;
typedef scalar_t__ PINBV_SET_TEXT_COLOR ;
typedef scalar_t__ PINBV_RESET_DISPLAY ;
typedef scalar_t__ PINBV_INSTALL_DISPLAY_STRING_FILTER ;
typedef scalar_t__ PINBV_ENABLE_DISPLAY_STRING ;
typedef scalar_t__ PINBV_DISPLAY_STRING ;
typedef scalar_t__ PINBV_ACQUIRE_DISPLAY_OWNERSHIP ;
typedef int * HMODULE ;
typedef int BOOL ;


 int FALSE ;
 scalar_t__ GetProcAddress (int *,char*) ;
 scalar_t__ InbvAcquireDisplayOwnership ;
 scalar_t__ InbvDisplayString ;
 scalar_t__ InbvEnableDisplayString ;
 scalar_t__ InbvInstallDisplayStringFilter ;
 scalar_t__ InbvResetDisplay ;
 scalar_t__ InbvSetScrollRegion ;
 scalar_t__ InbvSetTextColor ;
 scalar_t__ InbvSolidColorFill ;
 int * LoadLibrary (int ) ;
 int TRUE ;

BOOL InbvInit(PVOID ntosbase , PSTR ntosname)
{
HMODULE hlib = LoadLibrary(ntosname);


if (hlib == ((void*)0))
{
return FALSE ;
}


InbvAcquireDisplayOwnership = (PINBV_ACQUIRE_DISPLAY_OWNERSHIP)((ULONG)GetProcAddress(hlib , "InbvAcquireDisplayOwnership") - (ULONG)hlib + (ULONG)ntosbase);
InbvResetDisplay = (PINBV_RESET_DISPLAY)((ULONG)GetProcAddress(hlib , "InbvResetDisplay") - (ULONG)hlib + (ULONG)ntosbase);
InbvSolidColorFill = (PINBV_SOLID_COLOR_FILL)((ULONG)GetProcAddress(hlib , "InbvSolidColorFill") - (ULONG)hlib + (ULONG)ntosbase);
InbvSetTextColor = (PINBV_SET_TEXT_COLOR)((ULONG)GetProcAddress(hlib , "InbvSetTextColor") - (ULONG)hlib + (ULONG)ntosbase);
InbvInstallDisplayStringFilter = (PINBV_INSTALL_DISPLAY_STRING_FILTER)((ULONG)GetProcAddress(hlib , "InbvInstallDisplayStringFilter") - (ULONG)hlib + (ULONG)ntosbase);
InbvEnableDisplayString = (PINBV_ENABLE_DISPLAY_STRING)((ULONG)GetProcAddress(hlib , "InbvEnableDisplayString") - (ULONG)hlib + (ULONG)ntosbase);
InbvSetScrollRegion = (PINVB_SET_SCROLL_REGION)((ULONG)GetProcAddress(hlib , "InbvSetScrollRegion") - (ULONG)hlib + (ULONG)ntosbase);
InbvDisplayString = (PINBV_DISPLAY_STRING)((ULONG)GetProcAddress(hlib , "InbvDisplayString") - (ULONG)hlib + (ULONG)ntosbase);


if (InbvAcquireDisplayOwnership &&
InbvResetDisplay &&
InbvSolidColorFill &&
InbvSetTextColor &&
InbvInstallDisplayStringFilter &&
InbvEnableDisplayString &&
InbvSetScrollRegion &&
InbvDisplayString)
{
return TRUE ;
}
return FALSE ;


}
